--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,16 @@
 
 	<display-name>wicket-in-3-days</display-name>
 
+    <filter>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>guiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 	<!--
 		There are three means to configure Wickets configuration mode and they 
 		are tested in the order given.
@@ -16,6 +26,7 @@
 		The value might be either "development" (reloading when templates change) or 
 		"deployment". If no configuration is found, "development" is the default. -->
 
+<!-- 
 	<filter>
 		<filter-name>wicket.wicket-in-3-days</filter-name>
 		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
@@ -29,4 +40,9 @@
 		<filter-name>wicket.wicket-in-3-days</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+ -->
+ 	
+	<listener>  
+  		<listener-class>de.mosmann.config.Bootstrap</listener-class>  
+ 	</listener> 
 </web-app>
