--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>guava</artifactId>
 			<version>14.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.agilecoders.wicket</groupId>
+			<artifactId>wicket-bootstrap-extensions</artifactId>
+			<version>0.8.4</version>
+		</dependency>
             
 		<!-- LOGGING DEPENDENCIES - LOG4J -->
 		<dependency>
